# mipt-math-data-visualization

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  vis-dag.cpp  vis-labels.cpp  vis-tree.cpp
data/dag/: dag_9_13.xml
data/labels/: chain.txt  impossible.txt  sample1.txt  sample2.txt
data/tree/: bamboo.xml  disbalanced.xml  full_binary.xml  full_ternary.xml
src/: CMakeLists.txt  common.hpp  graphml.cpp  graphml.hpp  svg.cpp  svg.hpp
src/datavis/: common.hpp  graphml.cpp  graphml.hpp  svg.cpp  svg.hpp
